# mlops-3.0

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  base.Dockerfile  dev.Dockerfile  docker-compose.yaml  prod.Dockerfile  pyproject.toml
.github/workflows/: python-project-deploy-on-github.yaml
src/: example.py
tests/: test_example.py
