[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Vladislav Garist <vv.garist@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
pre-commit = "^3.7.0"
mypy = "^1.9.0"

[tool.ruff]
line-length = 100
output-format = "concise"

[[tool.mypy.overrides]]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
