[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Vladislav Garist <vv.garist@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
black = "^24.3.0"
isort = "^5.13.2"


[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
# Ignore missing module docstrings
disable = ["missing-module-docstring"]

[tool.pylint.'tests.*']
disable = ["missing-function-docstring"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
